--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About me</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li class="dropdown"><a href="file:///C:/Users/esthe/Desktop/assignments/4.1/Multimedia/potfolio/projects.html"><span>Projects</span></i></a>
+          <li class="dropdown"><a href="projects.html"><span>Projects</span></i></a>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
