--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
           <h2 class="hero-title mb-4">PROJECTS</h2>
           <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
-              <a href="file:///C:/Users/esthe/Desktop/assignments/4.1/Multimedia/potfolio/index.html">Home</a>
+              <a href="index.html">Home</a>
             </li>
              </ol>
         </div>
